mobile nav fixed, overflow-x hidden

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -30,6 +30,10 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 figure {
     margin: 0;
     padding: 0;
