--- a/styles/sass/_mobilemenu.scss
+++ b/styles/sass/_mobilemenu.scss
@@ -12,6 +12,7 @@
 {
     display: block;
     position: absolute;
+    position: fixed;
     top: 50px;
     right: 50px;
     z-index: 1;
